@@ -1,4 +1,3 @@
 def call(){
-    sh 'clean package sonar:sonar -DargLine="--add-opens java.base/java.lang=ALL-UNNAMED
-'
+    sh 'clean package sonar:sonar'
 }
